# warehouse_bot

./: .gitignore  .gitmodules  README.md  calibracion.npz
src/planner/: CMakeLists.txt  package.xml
src/planner/include/planner/: planner_utils.hpp
src/planner/src/: greedy_planner_node.cpp  hybrid_astar_core.cpp  hybrid_astar_node.cpp  integrated_mission_planner.cpp  planner_utils.cpp
src/rosmaster_bringup/: package.xml  setup.cfg  setup.py
src/rosmaster_bringup/launch/: bringup.launch.py  slam.launch.py
src/rosmaster_bringup/params/: ekf.yaml  mapper_params_online_async.yaml
src/rosmaster_bringup/rosmaster_bringup/: Ackermann_driver.py  base_node.py
src/rosmaster_calibration/: package.xml  setup.py
src/rosmaster_calibration/launch/: auto_calibration.launch.py
src/rosmaster_calibration/rosmaster_calibration/: __init__.py  auto_calibration.py
src/rosmaster_control/: package.xml  setup.cfg  setup.py
src/rosmaster_control/rosmaster_control/: slam_controller.py
src/rosmaster_description/: package.xml  setup.cfg  setup.py
src/rosmaster_description/params/: joint_controller.yaml
src/rosmaster_description/urdf/: rosmaster.urdf.xacro  rosmaster_ackermann.gazebo.xacro  rosmaster_imu.gazebo.xacro  rosmaster_lidar.gazebo.xacro  yahboomcar_R2.urdf  yahboomcar_R2.urdf.xacro
src/rosmaster_localization/: package.xml  setup.cfg  setup.py
src/rosmaster_localization/launch/: planner.launch.py
src/rosmaster_localization/maps/: map.pgm  map2.yaml  map3.pgm  map4.pgm  map4.yaml
src/rosmaster_planner/: package.xml  setup.cfg  setup.py
src/rosmaster_planner/maps/: map.yaml  map2.pgm  map2.yaml  map3.yaml
src/rosmaster_planner/params/: amcl_params.yaml
src/rosmaster_simulation/: package.xml  setup.cfg  setup.py
src/rosmaster_simulation/launch/: sim.launch.py
src/rosmaster_simulation/models/warehouse1/: model.config  model.sdf
src/rosmaster_simulation/worlds/: warehouse
src/vision/: package.xml  setup.py
src/vision/launch/: main_launch.py
src/vision/vision/: bridge_node.py  calibrateCamera.py  inference.py  inferenia_zmq.py  initial_pose_node.py  prueba.py  receptor_zmq_node.py  signals.py  video_saver.py
